@@ -33,6 +33,8 @@ Ver.13 (In Development)
 - The page number text field in pagination has the up and down button. It means the type of it set to "number".
 - Apache2 conf file for hiding some files as like *.yaml and .git directory. It stored in dist-docs/apache2-config.
 - In case of copy, the default-values are prior to the defaults of schema.
+- The username of the login panel is filtered just ASCII characters. If INTERMediatorOnPage.userNameJustASCII set false,
+  The username is going to be same as input.
 - [BUG FIX] On the Ver.12, SAML authentication didn't work in spite of Ver.11 can do. It didn't check with SAML manual
   test on Ver.12 after added types to php codes. Ver.13 works SAML.
 
